alignment fixes

--- a/Style/cartpage_style.css
+++ b/Style/cartpage_style.css
@@ -144,8 +144,6 @@
 
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    margin:20px 10px;
-
     padding: -20px;
     text-align: center;
 }
@@ -154,7 +152,7 @@
 
 .product-title {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 18px;
+    font-size: 14px;
 }
 
 .product-qty {
@@ -183,7 +181,7 @@
     padding-left: 15px;
 }
 
-.c1, .c2, .c3 {
+.card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     margin:20px 10px;
     padding: -20px;
@@ -204,13 +202,13 @@
         text-align: right;
         font-size: 18px;
     }
-    .del{
+    .del-item-button{
         padding-top: 5px;
         padding-right: 40px;
         text-align: right;
         font-size: 20px;
     }
-    .c1, c2, c3 {
+    .card {
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
         margin:30px 150px;
         padding: -20px;
@@ -231,7 +229,7 @@
     color: #428fe5;
 }
 
-#deletebtn1, #deletebtn2, #deletebtn3 {
+.del-item-button {
     padding-bottom: 25px;
     color:#6c7075;
 }
@@ -303,9 +301,6 @@
     font-size: large;
     background-color: #428fe5;
     color: white;
-    position: absolute;
-    right:    0;
-    bottom:   0;
 }
 /*buttons styling*/
 
@@ -327,11 +322,37 @@
     max-width: 300px;
 }
 
-
+.main-buttons{
+    text-align: center;
+}
 
 /*Empty Cart Page Styling*/
 
 #noitems {
     margin-top: 30px;
     text-align: center;
+}
+
+/*Wish List Styling*/
+
+.star-rating {
+    padding-bottom: 10px;
+}
+.wishlist-icons {
+
+}
+.delete-fav {
+    color: #428fe5;
+    padding-right: 15px;
+
+}
+
+.checked{
+    color: #f28500;
+    text-shadow: 0 0 3px #ffbf00;
+}
+
+.unchecked{
+    color: white;
+    text-shadow: 0 0 3px #222222;
 }
